# chat_app

./: .gitmodules  CMakeLists.txt  README.md  client.cpp  logging.h  message.h  message_string.h  resources.qrc  server.cpp  stream.cpp  stream.h  user.h
assets/Done_for_You/: LICENSE
client/: client.cpp  client.h  main.cpp
include/network-interface/: netface.hpp
server/: main.cpp  server.cpp  server.h  servhead.h  user.cpp  user.cpp1  user.h
src/client/: CMakeLists.txt  client.cpp  client.h  client.hpp  conndialog.cpp  conndialog.h  conndialog.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  newcontactdialog.cpp  newcontactdialog.hpp  sqlite3_wrap.h
src/client-gui/: client.cpp  client.h  client.hpp  conndialog.cpp  conndialog.h  connectionmanager.cpp  connectionmanager.h  contactlistitem.cpp  contactlistitem.h  main-gui.cpp  mainwindow.cpp  mainwindow.h  messageitem.h  netface.cpp  netface.h  newcontactdialog.cpp  newcontactdialog.h
src/connection-manager/: connection-manager.cpp  connection-manager.h
src/guibridge/: CMakeLists.txt  contactlistmodel.cpp  contactlistmodel.hpp  guibridge.cpp  guibridge.hpp  main.cpp
src/kirigami/: CMakeLists.txt  ContactList.qml  ContactListView.qml  MenuArea.qml  MenusArea.qml  MessageArea.qml  contactlistmodel.cpp  contactlistmodel.hpp  guibridge.cpp  guibridge.hpp  main.cpp  main.qml  messagelistmodel.cpp  messagelistmodel.hpp  resources.qrc
src/network-interface/: CMakeLists.txt  netface.cpp  netface.h  netface.hpp
src/network-interface/connection-manager/: connection-manager.cpp  connection-manager.hpp
src/network-interface/stream/: stream.cpp  stream.hpp
src/qml/: CMakeLists.txt  ContactList.qml  MenusArea.qml  MessageArea.qml  contactlistmodel.cpp  contactlistmodel.hpp  guibridge.cpp  guibridge.hpp  main.cpp  main.qml  qml.qrc
src/server/: CMakeLists.txt  main.cpp  psql-wrap.hpp  server.cpp  server.h  server.hpp  user.cpp  user.h  user.hpp
src/stream/: stream.cpp  stream.h
src/widgetgui/: CMakeLists.txt  conndialog.cpp  conndialog.hpp  mainwindow.cpp  mainwindow.hpp  newcontactdialog.cpp  newcontactdialog.hpp
stream/: stream.h
tests/: CMakeLists.txt  clientMessageExchange.cpp
